kubernetes/apps/external-endpoints/neurio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neurio
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Neurio"
    gethomepage.dev/description: "Home power monitor"
    gethomepage.dev/group: "Home Automation"
    gethomepage.dev/icon: "neurio.png"
spec:
  parentRefs:
    - name: ${gatewayName}
      namespace: gateway
      sectionName: https
  hostnames:
    - "power.${domain}"
  rules:
    - backendRefs:
        - name: neurio
          port: 80
